# GraphCaster

./: .gitattributes  .gitignore  README.md  build.bat  graph-caster.code-workspace
python/: README.md  pyproject.toml
python/graph_caster/: __init__.py  __main__.py  agent_delegate.py  ai_routing.py  annotations.py  artifacts.py  artifacts_s3.py  cache_strategies.py  cli_run_args.py  code_node_worker.py  cursor_agent_argv.py  dataset_export.py  delay_wait_exec.py  document_revision.py  edge_conditions.py  error_handlers.py  errors.py  fork_parallel.py  gc_pin.py  graph_ref_workspace.py  handle_contract.py  host_context.py  http_request_exec.py  marketplace.py  models.py  nested_run_subprocess.py  node_output_cache.py  node_registry.py  node_types_catalog.py  otel_tracing.py  partial_exec.py  pause_resume.py  port_data_kinds.py  process_exec.py  python_code_exec.py  rag_index_exec.py  rag_query_exec.py  replay.py  run_audit.py  run_broker_fs_watcher.py  (+18 more)
python/graph_caster/agent/: __init__.py  in_runner_exec.py  loop.py  tool_executor.py
python/graph_caster/ai_builder/: __init__.py  builder.py  prompts.py  validator.py
python/graph_caster/audit/: __init__.py  audit_event.py  audit_hook.py  audit_query.py
python/graph_caster/auth/: __init__.py  api_keys.py  permissions.py  rbac.py  rbac_hook.py  scope_map.py  secrets_providers_config.py  secrets_providers_routes.py  sso_config.py  sso_config_routes.py
python/graph_caster/cli/: _helpers.py  _registry.py
python/graph_caster/contract/: __init__.py  _generated_meta.py  document.py
python/graph_caster/credentials/: __init__.py  store.py
python/graph_caster/exec/: __init__.py  env_merge.py  io_pump.py  llm_agent_process.py  process_errors.py
python/graph_caster/execution/: __init__.py  execution_coordinator.py  pool_sizing.py  ready_queue.py  redis_lock.py  worker.py  worker_coordinator.py  worker_pool.py
python/graph_caster/expression/: __init__.py  context.py  errors.py  evaluator.py  functions.py  parser.py  templates.py
python/graph_caster/history/: README.md  __init__.py  artifacts.py  catalog.py  events.py  replay.py
python/graph_caster/i18n/: __init__.py  aggregator.py
python/graph_caster/llm/: __init__.py  errors.py  fallback.py  pricing.py  provider.py  registry.py  usage.py
python/graph_caster/mcp_client/: __init__.py  client.py
python/graph_caster/mcp_oauth/: __init__.py  github_device.py
python/graph_caster/mcp_server/: __init__.py  handlers.py  per_graph_tools.py  server.py
python/graph_caster/node_api/: __init__.py  base.py  builtin_nodes.py  context.py  fields.py  registry.py  schema_gen.py
python/graph_caster/nodes/: __init__.py  api_call.py  builtin_tool.py  code.py  llm.py  (+17 more)
python/scripts/: bench_run_broker_fanout.py
python/tests/: test_agent_delegate.py  test_ai_builder.py  test_ai_builder_validator.py  test_ai_route_node.py  test_annotations.py  test_annotations_api.py  test_annotations_locks_bounded.py  test_api_call_ssrf.py  test_api_keys_api.py  test_api_keys_rate_limit.py  test_api_keys_store.py  test_api_v1.py  test_artifacts_root_run.py  test_artifacts_s3.py  test_artifacts_storage.py  test_audit_api.py  test_audit_enforcement.py  test_audit_hmac.py  test_audit_hook.py  test_bounded_queue.py  test_broadcaster_metrics.py  test_broker_relay_fanout.py  test_builtin_tools.py  test_cache_strategies.py  test_cli_main.py  test_code_parser.py  test_collab_ws.py  test_composio_bridge.py  test_config_endpoint.py  test_credentials_api.py  test_credentials_store.py  test_cursor_agent_flow.py  test_cursor_agent_preset.py  test_dataset_export.py  test_delay_wait_exec.py  test_document_revision.py  test_edge_condition_templates.py  test_edge_conditions.py  test_embed_serve_api.py  test_embedder_registry.py  (+185 more)
ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
(+1284 files in other folders)
