# Copyright GraphCaster. All Rights Reserved.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-caster"
version = "0.1.0"
description = "Graph document loader and scenario runner for GraphCaster"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "GraphCaster" }]

dependencies = ["jsonschema>=4.0", "anyio>=4.0"]

[project.scripts]
graph-caster = "graph_caster.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27"]
broker = ["starlette>=0.37", "uvicorn[standard]>=0.27"]
redis = ["redis>=5.0"]
scaling = ["redis>=5.0", "rq>=2.0"]
mcp = ["mcp>=1.2.0"]
s3 = ["boto3>=1.34"]
vault = ["hvac>=2.0,<3"]
scheduler = ["croniter>=1.0"]
otel = [
    "opentelemetry-api>=1.26.0,<2",
    "opentelemetry-sdk>=1.26.0,<2",
    "opentelemetry-exporter-otlp>=1.26.0,<2",
]
rag-chroma = ["chromadb>=0.4"]
rag-faiss = ["numpy>=1.24", "faiss-cpu>=1.7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["graph_caster*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
